--- a/public/gallery.yaml
+++ b/public/gallery.yaml
@@ -5,5 +5,11 @@
   image: 12342437285_90840acb52_k.jpg
   caption: San Francisco, CA - 2014
 2:
-  image:
-  caption:
+  image: 11320826296_1ed1a4e0e6_k.jpg
+  caption: Hayward, CA - 2013
+3:
+  image: 10436797616_f5e1176325_k.jpg
+  caption: San Francisco, CA - 2013
+4:
+  image: 11519903645_f1cd97b195_k.jpg
+  caption: Alameda, CA - 2013
