--- a/public/gallery.yaml
+++ b/public/gallery.yaml
@@ -13,3 +13,12 @@
 4:
   image: 11519903645_f1cd97b195_k.jpg
   caption: Alameda, CA - 2013
+5:
+  image: 14398350281_73dd3c53f9_k.jpg
+  caption: San Francisco, CA - 2014
+6:
+  image: 13989442731_26ae748189_k.jpg
+  caption: Fremont, CA - 2014
+7:
+  image: 14031325243_1076e77ba0_k.jpg
+  caption: Hayward, CA - 2014
